[gd_scene load_steps=28 format=3 uid="uid://ckkwdoj7vpe0d"]

[ext_resource type="Script" uid="uid://dddebooap2efg" path="res://enemy/enemy.gd" id="1_5anih"]
[ext_resource type="Script" uid="uid://dh8854weabqly" path="res://state_machine/state_machine.gd" id="2_1h0du"]
[ext_resource type="AudioStream" uid="uid://ckh448vtqw8wj" path="res://audio/wraithSounds/MonsterFootstep.ogg" id="2_rve8k"]
[ext_resource type="Script" uid="uid://cioukfjvhamtn" path="res://enemy/states/state_roaming.gd" id="4_s81n7"]
[ext_resource type="Script" uid="uid://bo20pgbkufnbr" path="res://enemy/states/state_chasing.gd" id="5_gc7sf"]
[ext_resource type="Script" uid="uid://djbebsn4ep0y4" path="res://enemy/states/state_searching.gd" id="7_2fq87"]
[ext_resource type="AudioStream" uid="uid://cef82326c1a55" path="res://audio/EnemyNearbyLoop.ogg" id="7_5ffra"]
[ext_resource type="Texture2D" uid="uid://qqk5yf1k4ema" path="res://images/JumpscarePlaceholder.png" id="7_78jik"]
[ext_resource type="AudioStream" uid="uid://cnsvljdvv2n58" path="res://audio/EnemyVeryClose.ogg" id="8_e355f"]
[ext_resource type="AudioStream" uid="uid://co66rexru10yy" path="res://audio/EnemyChaseFull.ogg" id="9_e355f"]
[ext_resource type="AudioStream" uid="uid://beb28qguiik2w" path="res://audio/wraithSounds/WraithAmbience.mp3" id="11_n2hyd"]
[ext_resource type="AudioStream" uid="uid://bya7woahpsfkc" path="res://audio/wraithSounds/WraithAggro.mp3" id="12_c6eq3"]
[ext_resource type="AudioStream" uid="uid://cus80l80tpwjt" path="res://audio/wraithSounds/WraithDeaggro.mp3" id="13_34gv7"]
[ext_resource type="AudioStream" uid="uid://cqyfwa17fp0ki" path="res://audio/wraithSounds/WraithChase.mp3" id="14_pg32h"]
[ext_resource type="AudioStream" uid="uid://b3klxmkb1lldy" path="res://audio/wraithSounds/Jumpscare.ogg" id="15_nfy00"]
[ext_resource type="AudioStream" uid="uid://c1b4mowtf8jrx" path="res://audio/wraithSounds/WraithIdle1.mp3" id="16_iocd2"]
[ext_resource type="AudioStream" uid="uid://bswb5v4wdol23" path="res://audio/wraithSounds/WraithIdle2.mp3" id="17_05kf6"]
[ext_resource type="AudioStream" uid="uid://b42obh4gnhf42" path="res://audio/wraithSounds/WraithIdle3.mp3" id="18_26s8d"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1wwld"]
radius = 0.194045
height = 1.95216

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_l0tcs"]
random_pitch = 1.2
random_volume_offset_db = 3.0
streams_count = 1
stream_0/stream = ExtResource("2_rve8k")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_78jik"]
albedo_texture = ExtResource("7_78jik")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xoplw"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ipcql"]
random_pitch = 1.15
streams_count = 1
stream_0/stream = ExtResource("12_c6eq3")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_jb0mw"]
random_pitch = 1.15
streams_count = 1
stream_0/stream = ExtResource("13_34gv7")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_mqeel"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("14_pg32h")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rdk38"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("15_nfy00")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_kgpkr"]
random_pitch = 1.15
streams_count = 3
stream_0/stream = ExtResource("16_iocd2")
stream_1/stream = ExtResource("17_05kf6")
stream_2/stream = ExtResource("18_26s8d")

[node name="Enemy" type="CharacterBody3D" groups=["enemy"]]
script = ExtResource("1_5anih")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(-1, -3.61155e-15, -8.74227e-08, 0, -1, 4.13113e-08, -8.74227e-08, 4.13113e-08, 1, -1.58819e-22, 1.21416, -0.023086)
light_color = Color(1, 0.0174549, 0.0200607, 1)
light_energy = 0.7
shadow_enabled = true
distance_fade_enabled = true
spot_range = 6.5

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(-1, 3.23682e-36, 8.74227e-08, 0, 1, -3.7025e-29, -8.74227e-08, -3.7025e-29, -1, -0.0161248, 1.18514, -0.0584934)
light_color = Color(0.926305, 0, 0, 1)
shadow_enabled = true
omni_range = 1.798

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.47204, 0)
shape = SubResource("CapsuleShape3D_1wwld")

[node name="StepSoundPlayer" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_l0tcs")
volume_db = -16.255
pitch_scale = 0.47
bus = &"ReverbAmbience"

[node name="Eye" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.27178, -0.0451027)

[node name="EyeRayCast" type="RayCast3D" parent="Eye"]
unique_name_in_owner = true
enabled = false
target_position = Vector3(0, 0, -1)

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
unique_name_in_owner = true
path_desired_distance = 0.6
target_desired_distance = 0.6
path_max_distance = 5.01

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_1h0du")
initial_state = NodePath("Roaming")

[node name="Roaming" type="Node" parent="StateMachine"]
script = ExtResource("4_s81n7")
_roaming_speed = 3.0

[node name="Chasing" type="Node" parent="StateMachine"]
script = ExtResource("5_gc7sf")

[node name="Searching" type="Node" parent="StateMachine"]
script = ExtResource("7_2fq87")

[node name="TerrorRadiusNear" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_5ffra")
volume_db = -80.0
autoplay = true
bus = &"Chase Music"
parameters/looping = true

[node name="TerrorRadiusSearching" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_e355f")
volume_db = -80.0
autoplay = true
bus = &"Chase Music"
parameters/looping = true

[node name="TerrorRadiusChase" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_e355f")
volume_db = -80.0
autoplay = true
bus = &"Chase Music"
parameters/looping = true

[node name="FullModel" type="Node3D" parent="."]

[node name="EnemyFront" type="CSGBox3D" parent="FullModel"]
transform = Transform3D(-0.942377, 1.02041e-07, 0, -8.23852e-08, -1.16721, 0, 0, 0, 0.00259676, -0.0199228, 1.10892, 0)
material_override = SubResource("StandardMaterial3D_78jik")
cast_shadow = 0
size = Vector3(1.10197, 1.03906, 1)

[node name="Subtraction" type="CSGBox3D" parent="FullModel/EnemyFront"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.490461, -0.139168, 11.71)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.205914, 0.789032, 53.7296)

[node name="Subtraction2" type="CSGBox3D" parent="FullModel/EnemyFront"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.479555, -0.139168, 11.71)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.205914, 0.789032, 53.7296)

[node name="Subtraction3" type="CSGBox3D" parent="FullModel/EnemyFront"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0388462, -0.499691, 11.71)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(1.08733, 0.0679855, 53.7296)

[node name="Subtraction4" type="CSGBox3D" parent="FullModel/EnemyFront"]
transform = Transform3D(0.95459, -0.369005, 0, 0.240536, 0.954589, 0, 0, 0, 1, -0.430539, -0.202554, 12.8582)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.155628, 0.277639, 53.7296)

[node name="Subtraction9" type="CSGBox3D" parent="FullModel/EnemyFront"]
transform = Transform3D(0.900524, -0.538545, 0, 0.351051, 0.900524, 0, 0, 0, 1, -0.531102, 0.360283, 12.009)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.140802, 0.292262, 53.7296)

[node name="Subtraction10" type="CSGBox3D" parent="FullModel/EnemyFront"]
transform = Transform3D(0.760757, 0.803887, 0, -0.524014, 0.760757, 0, 0, 0, 1, 0.557611, 0.331672, 12.009)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.140802, 0.292262, 53.7296)

[node name="Subtraction13" type="CSGBox3D" parent="FullModel/EnemyFront"]
transform = Transform3D(0.916745, 0.362125, 0, -0.113832, 1.04587, 0, 0, 0, 1, 0.31253, 0.440979, 12.009)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.0570734, 0.143192, 53.7296)

[node name="Subtraction15" type="CSGBox3D" parent="FullModel/EnemyFront"]
transform = Transform3D(0.916745, 0.362125, 0, -0.113832, 1.04587, 0, 0, 0, 1, 0.266374, 0.295211, 2.64976)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.0570734, 0.143192, 53.7296)

[node name="Subtraction14" type="CSGBox3D" parent="FullModel/EnemyFront"]
transform = Transform3D(0.834459, 0.672607, 0, -0.396304, 0.878969, 0, 0, 0, 1, 0.356698, 0.479938, 17.0873)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.0683039, 0.143192, 53.7296)

[node name="Subtraction16" type="CSGBox3D" parent="FullModel/EnemyFront"]
transform = Transform3D(-0.916562, -0.0935764, -8.47337e-08, 0.115299, 1.10283, 2.15165e-08, 8.01444e-08, 3.1658e-08, -1, -0.221223, 0.341997, 6.36995)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.0570734, 0.143192, 53.7296)

[node name="Subtraction17" type="CSGBox3D" parent="FullModel/EnemyFront"]
transform = Transform3D(-0.916562, -0.0935764, -8.47337e-08, 0.115299, 1.10283, 2.15165e-08, 8.01444e-08, 3.1658e-08, -1, -0.213096, 0.254948, 18.7433)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.0570734, 0.143192, 53.7296)

[node name="Subtraction18" type="CSGBox3D" parent="FullModel/EnemyFront"]
transform = Transform3D(-0.90633, -0.435586, -8.47337e-08, -0.178737, 1.01747, 2.15165e-08, 7.29508e-08, 5.88012e-08, -1, -0.244331, 0.451941, 4.30574)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.0683039, 0.143192, 53.7296)

[node name="Subtraction5" type="CSGBox3D" parent="FullModel/EnemyFront"]
transform = Transform3D(0.749927, 0.819351, 0, -0.534094, 0.749926, 0, 0, 0, 1, -0.411396, -0.323464, 15.6465)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.139838, 0.142558, 53.7296)

[node name="Subtraction6" type="CSGBox3D" parent="FullModel/EnemyFront"]
transform = Transform3D(-0.990913, 0.166596, -2.38708e-10, 0.108596, 0.990913, 2.61604e-11, 3.17261e-05, -3.43533e-12, -1, 0.328611, -0.239493, 16.1705)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.124281, 0.0843301, 53.7296)

[node name="Subtraction8" type="CSGBox3D" parent="FullModel/EnemyFront"]
transform = Transform3D(-0.672625, 0.916533, -1.62034e-10, 0.597442, 0.672625, 1.43922e-10, 3.17261e-05, -3.40134e-12, -1, 0.371675, -0.177623, 15.0567)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.102301, 0.128591, 53.7296)

[node name="Subtraction7" type="CSGBox3D" parent="FullModel/EnemyFront"]
transform = Transform3D(-0.626196, -0.965683, -2.24549e-10, -0.629481, 0.626196, -7.04287e-11, 2.74757e-05, 1.96478e-05, -1, 0.361665, -0.27289, 11.71)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.143093, 0.123859, 53.7296)

[node name="Subtraction11" type="CSGBox3D" parent="FullModel/EnemyFront"]
transform = Transform3D(-0.626196, -0.965692, -2.2455e-10, -0.629481, 0.626196, -7.04287e-11, 2.74757e-05, 1.96478e-05, -1, 0.268437, -0.421706, 16.0718)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.321546, 0.188435, 53.7296)

[node name="Subtraction12" type="CSGBox3D" parent="FullModel/EnemyFront"]
transform = Transform3D(-0.576828, -1.01027, -2.18237e-10, -0.675014, 0.551408, -8.69455e-11, 2.74757e-05, 1.96478e-05, -1, -0.280033, -0.443948, 23.7367)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.204474, 0.350054, 53.7296)

[node name="Subtraction19" type="CSGBox3D" parent="FullModel/EnemyFront"]
transform = Transform3D(-0.212703, -1.15027, -1.56329e-10, -0.862051, 0.0395832, -1.74383e-10, 2.74757e-05, 1.96478e-05, -1, -0.0653573, -0.480804, 23.7367)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.204474, 0.471852, 53.7296)

[node name="EnemyBack" type="CSGBox3D" parent="FullModel"]
transform = Transform3D(-0.942377, 1.02041e-07, 0, -8.23852e-08, -1.16721, 0, 0, 0, 0.00259676, -0.0199228, 1.10892, 0.0116425)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
size = Vector3(1.10197, 1.03906, 1)

[node name="Subtraction" type="CSGBox3D" parent="FullModel/EnemyBack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.490461, -0.139168, 11.71)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.205914, 0.789032, 53.7296)

[node name="Subtraction2" type="CSGBox3D" parent="FullModel/EnemyBack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.479555, -0.139168, 11.71)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.205914, 0.789032, 53.7296)

[node name="Subtraction3" type="CSGBox3D" parent="FullModel/EnemyBack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0388462, -0.499691, 11.71)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(1.08733, 0.0679855, 53.7296)

[node name="Subtraction4" type="CSGBox3D" parent="FullModel/EnemyBack"]
transform = Transform3D(0.95459, -0.369005, 0, 0.240536, 0.954589, 0, 0, 0, 1, -0.430539, -0.202554, 12.8582)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.155628, 0.277639, 53.7296)

[node name="Subtraction9" type="CSGBox3D" parent="FullModel/EnemyBack"]
transform = Transform3D(0.900524, -0.538545, 0, 0.351051, 0.900524, 0, 0, 0, 1, -0.531102, 0.360283, 12.009)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.140802, 0.292262, 53.7296)

[node name="Subtraction10" type="CSGBox3D" parent="FullModel/EnemyBack"]
transform = Transform3D(0.760757, 0.803887, 0, -0.524014, 0.760757, 0, 0, 0, 1, 0.557611, 0.331672, 12.009)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.140802, 0.292262, 53.7296)

[node name="Subtraction13" type="CSGBox3D" parent="FullModel/EnemyBack"]
transform = Transform3D(0.916745, 0.362125, 0, -0.113832, 1.04587, 0, 0, 0, 1, 0.31253, 0.440979, 12.009)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.0570734, 0.143192, 53.7296)

[node name="Subtraction15" type="CSGBox3D" parent="FullModel/EnemyBack"]
transform = Transform3D(0.916745, 0.362125, 0, -0.113832, 1.04587, 0, 0, 0, 1, 0.266374, 0.295211, 2.64976)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.0570734, 0.143192, 53.7296)

[node name="Subtraction14" type="CSGBox3D" parent="FullModel/EnemyBack"]
transform = Transform3D(0.834459, 0.672607, 0, -0.396304, 0.878969, 0, 0, 0, 1, 0.356698, 0.479938, 17.0873)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.0683039, 0.143192, 53.7296)

[node name="Subtraction16" type="CSGBox3D" parent="FullModel/EnemyBack"]
transform = Transform3D(-0.916562, -0.0935764, -8.47337e-08, 0.115299, 1.10283, 2.15165e-08, 8.01444e-08, 3.1658e-08, -1, -0.221223, 0.341997, 6.36995)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.0570734, 0.143192, 53.7296)

[node name="Subtraction17" type="CSGBox3D" parent="FullModel/EnemyBack"]
transform = Transform3D(-0.916562, -0.0935764, -8.47337e-08, 0.115299, 1.10283, 2.15165e-08, 8.01444e-08, 3.1658e-08, -1, -0.213096, 0.254948, 18.7433)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.0570734, 0.143192, 53.7296)

[node name="Subtraction18" type="CSGBox3D" parent="FullModel/EnemyBack"]
transform = Transform3D(-0.90633, -0.435586, -8.47337e-08, -0.178737, 1.01747, 2.15165e-08, 7.29508e-08, 5.88012e-08, -1, -0.244331, 0.451941, 4.30574)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.0683039, 0.143192, 53.7296)

[node name="Subtraction5" type="CSGBox3D" parent="FullModel/EnemyBack"]
transform = Transform3D(0.749927, 0.819351, 0, -0.534094, 0.749926, 0, 0, 0, 1, -0.411396, -0.323464, 15.6465)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.139838, 0.142558, 53.7296)

[node name="Subtraction6" type="CSGBox3D" parent="FullModel/EnemyBack"]
transform = Transform3D(-0.990913, 0.166596, -2.38708e-10, 0.108596, 0.990913, 2.61604e-11, 3.17261e-05, -3.43533e-12, -1, 0.328611, -0.239493, 16.1705)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.124281, 0.0843301, 53.7296)

[node name="Subtraction8" type="CSGBox3D" parent="FullModel/EnemyBack"]
transform = Transform3D(-0.672625, 0.916533, -1.62034e-10, 0.597442, 0.672625, 1.43922e-10, 3.17261e-05, -3.40134e-12, -1, 0.371675, -0.177623, 15.0567)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.102301, 0.128591, 53.7296)

[node name="Subtraction7" type="CSGBox3D" parent="FullModel/EnemyBack"]
transform = Transform3D(-0.626196, -0.965683, -2.24549e-10, -0.629481, 0.626196, -7.04287e-11, 2.74757e-05, 1.96478e-05, -1, 0.361665, -0.27289, 11.71)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.143093, 0.123859, 53.7296)

[node name="Subtraction11" type="CSGBox3D" parent="FullModel/EnemyBack"]
transform = Transform3D(-0.626196, -0.965692, -2.2455e-10, -0.629481, 0.626196, -7.04287e-11, 2.74757e-05, 1.96478e-05, -1, 0.268437, -0.421706, 16.0718)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.321546, 0.188435, 53.7296)

[node name="Subtraction12" type="CSGBox3D" parent="FullModel/EnemyBack"]
transform = Transform3D(-0.576828, -1.01027, -2.18237e-10, -0.675014, 0.551408, -8.69455e-11, 2.74757e-05, 1.96478e-05, -1, -0.280033, -0.443948, 23.7367)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.204474, 0.350054, 53.7296)

[node name="Subtraction19" type="CSGBox3D" parent="FullModel/EnemyBack"]
transform = Transform3D(-0.212703, -1.15027, -1.56329e-10, -0.862051, 0.0395832, -1.74383e-10, 2.74757e-05, 1.96478e-05, -1, -0.0653573, -0.480804, 23.7367)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
operation = 2
size = Vector3(0.204474, 0.471852, 53.7296)

[node name="EnemyBase" type="CSGBox3D" parent="FullModel"]
transform = Transform3D(-0.941106, 0.0605991, 0, -0.0489261, -1.16564, 0, 0, 0, 0.00259676, 0.126047, 0.118807, 0.0116425)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
size = Vector3(0.21636, 0.672554, 1)

[node name="EnemyBase2" type="CSGBox3D" parent="FullModel"]
transform = Transform3D(-0.939296, -0.0943057, 6.15883e-07, 0.0761398, -1.1634, -2.67099e-07, 0.000230614, -9.72771e-05, 0.00259676, -0.244912, 0.126228, 0.0116308)
material_override = SubResource("StandardMaterial3D_xoplw")
cast_shadow = 0
size = Vector3(0.21636, 0.67489, 1)

[node name="Sounds" type="Node3D" parent="."]

[node name="AmbienceSound" type="AudioStreamPlayer3D" parent="Sounds"]
stream = ExtResource("11_n2hyd")
volume_db = -12.166
pitch_scale = 0.53
autoplay = true
max_distance = 35.0
bus = &"ReverbAmbience"
parameters/looping = true

[node name="AggroSound" type="AudioStreamPlayer3D" parent="Sounds"]
stream = SubResource("AudioStreamRandomizer_ipcql")
bus = &"ReverbAmbience"

[node name="DeaggroSound" type="AudioStreamPlayer3D" parent="Sounds"]
stream = SubResource("AudioStreamRandomizer_jb0mw")
volume_db = -7.093
bus = &"ReverbAmbience"

[node name="ChaseSound" type="AudioStreamPlayer3D" parent="Sounds"]
stream = SubResource("AudioStreamRandomizer_mqeel")
volume_db = -11.877
bus = &"ReverbAmbience"

[node name="ChaseSound2" type="AudioStreamPlayer3D" parent="Sounds"]
stream = SubResource("AudioStreamRandomizer_rdk38")
volume_db = -26.693
unit_size = 20.33
pitch_scale = 0.77
bus = &"ReverbAmbience"

[node name="IdleSound" type="AudioStreamPlayer3D" parent="Sounds"]
stream = SubResource("AudioStreamRandomizer_kgpkr")
volume_db = -15.763
unit_size = 15.0
max_distance = 120.0
bus = &"ReverbAmbience"
